# keh-address-book-lambda

./: .checkov.yml  .cspell.json  .gitignore  .markdownlint.yaml  .mega-linter.yml  .trivyignore  404.html  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  index.html  mkdocs.yml  mypy.ini  objects.inv  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml  ci_mkdocs.yml  deploy_mkdocs.yml  docs.yml  mega-linter.yml
concourse/: ci.yml
concourse/scripts/: assume_role.sh  build_image.sh  set_pipeline.sh  terraform_infra.sh
docs/: documentation.md  faq.md  index.md
docs/technical_documentation/: api_github_services.md  api_lambda_function.md  api_logger.md  api_s3writer.md  logging.md  overview.md  the_process.md
documentation/: index.html
faq/: index.html
search/: search_index.json
src/: github_services.py  lambda_function.py  logger.py  s3writer.py
technical_documentation/api_github_services/: index.html
technical_documentation/api_lambda_function/: index.html
technical_documentation/api_logger/: index.html
technical_documentation/api_s3writer/: index.html
technical_documentation/logging/: index.html
technical_documentation/overview/: index.html
technical_documentation/the_process/: index.html
terraform/service/: data.tf  main.tf  providers.tf  secrets.tf  variables.tf
terraform/service/env/dev/: backend-dev.tfbackend  example_tfvars.txt
terraform/service/env/prod/: backend-prod.tfbackend  example_tfvars.txt
tests/: conftest.py
tests/unit/: fixtures.py  github_services_test.py  lambda_test.py  logger_test.py  s3writer_test.py
