[project]
name = "keh-address-book-lambda"
version = "0.1.0"
description = "AWS Lambda for address book data writes"
authors = [{ name = "ONSDigital/keh-dev" }]
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
	"boto3>=1.42.5,<2.0.0",
	"python-dotenv>=1.0.0,<2.0.0",
	"requests (>=2.32.5,<3.0.0)",
	"jwt (>=1.4.0,<2.0.0)"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
ruff = "^0.14.8"
flake8 = "^7.3.0"
pyflakes = "^3.4.0"
mypy = "^1.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
