[project]
name = "keh-address-book-lambda"
version = "0.1.0"
description = "AWS Lambda for address book data writes"
authors = [{ name = "ONSDigital/keh-dev" }]
readme = "README.md"
requires-python = ">=3.10,<3.14"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
boto3 = ">=1.42.5,<2.0.0"
python-dotenv = ">=1.0.0,<2.0.0"
requests = ">=2.32.5,<3.0.0"
# Note: The project currently depends on the 'jwt' package (not PyJWT).
jwt = ">=1.4.0,<2.0.0"
github-api-toolkit = { git = "https://github.com/ONS-Innovation/github-api-package.git", rev = "v2.0.3" }

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
ruff = "^0.14.8"
flake8 = "^7.3.0"
pyflakes = "^3.4.0"
mypy = "^1.19.0"
pytest-cov = "^4.1.0"
pytest-xdist = "^3.5.0"
black = "^25.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
	"src",
]

